# Triangulation

./: CMakeLists.txt  HigherOrder.cpp  HigherOrder.h  IterativeEigen.cpp  IterativeEigen.h  IterativeLS.cpp  IterativeLS.h  Kanatani.cpp  Kanatani.h  LinearEigen.cpp  LinearEigen.h  LinearLS.cpp  LinearLS.h  Plotting_Results.ipynb  Poly.cpp  Poly.h  PolyAbs.cpp  PolyAbs.h  PolyBasis.cpp  PolyBasis.h  README.md  coeff_calculator.ipynb  main.cpp  main2.cpp  notes.txt  synthetic_test_points_generator.ipynb  temp.cpp
CppUnitLite/: CMakeLists.txt  SimpleString.cpp
base/: IterativeEigen.cpp  IterativeEigen.h  IterativeLS.cpp  IterativeLS.h  LinearLS.cpp  LinearLS.h  PolyAbs.cpp
libOrsa/: CMakeLists.txt  essential_model.cpp  essential_model.hpp  fundamental_model.cpp  fundamental_model.hpp  fundamental_model_test.cpp  fundamental_orsa_test.cpp  homography_model.cpp  homography_model.hpp  homography_model_test.cpp  homography_orsa_test.cpp  line_model.cpp  line_model.hpp  lrtsac.cpp  lrtsac.hpp  match.hpp  model_estimator.cpp  model_estimator.hpp  orsa.cpp  orsa.hpp  ransac.cpp  ransac.hpp  ransac_algorithm.cpp  ransac_algorithm.hpp
libOrsa/libNumerics/: CMakeLists.txt  matrix.cpp  matrix.h
